# GD32-ARMClang-CMake

./: .clang-format  ARMClang_Cortex-M4.cmake  CMakeLists.txt  main.c
Platform/Inc/: gd32f30x.h
System/: system_gd32f30x.c
